# ebvm

./: CMakeLists.txt  LICENSE
include/ebvm/: ebvm.hpp  opcodes.hpp  processor.hpp  registers.hpp  stack.hpp  types.hpp
src/: ebvm.cpp  processor.cpp  stack.cpp
tests/simple/: CMakeLists.txt  simple_test.cpp
